static response builder, simplified response reading now that reading server error is no longer a concern of the low level client

--- a/src/Tests/Tests.csproj
+++ b/src/Tests/Tests.csproj
@@ -2,12 +2,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <!--<DotNetCoreOnly>1</DotNetCoreOnly>-->
+    <DotNetCoreOnly>1</DotNetCoreOnly>
     <!--<TestPackageVersion>6.0.0</TestPackageVersion>-->
     <DotNetCoreOnly Condition="'$(TRAVIS)'=='true'">1</DotNetCoreOnly>
-    <!--<TargetFrameworks Condition="'$(DotNetCoreOnly)'==''">netcoreapp1.1;net45;net46</TargetFrameworks>-->
-    <!--<TargetFrameworks Condition="'$(DotNetCoreOnly)'=='1'">netcoreapp1.1</TargetFrameworks>-->
-    <TargetFrameworks>netcoreapp1.1</TargetFrameworks>
+    <TargetFrameworks Condition="'$(DotNetCoreOnly)'==''">netcoreapp1.1;net45;net46</TargetFrameworks>
+    <TargetFrameworks Condition="'$(DotNetCoreOnly)'=='1'">netcoreapp1.1</TargetFrameworks>
     <VersionPrefix>6.0.0</VersionPrefix>
     <VersionSuffix>alpha</VersionSuffix>
     <DefineConstants Condition="'$(TargetFramework)'=='netcoreapp1.1' OR '$(DotNetCoreOnly)'=='1'">$(DefineConstants);DOTNETCORE</DefineConstants>
