--- a/NuGet.config
+++ b/NuGet.config
@@ -2,7 +2,7 @@
 <configuration>
   <packageSources>
     <add key="Temp DiffPlex Feed" value="https://www.myget.org/F/diffplex-temp/api/v3/index.json" />
-    <add key="Xunit myget" value="https://www.myget.org/F/xunit/api/v3/index.json" />
+<!--    <add key="Xunit myget" value="https://www.myget.org/F/xunit/api/v3/index.json" />-->
     <add key="nuget.org" value="https://www.nuget.org/api/v2/" />
   </packageSources>
 </configuration>
